test/libyul/yulSyntaxTests/passing_builtin_with_literal_argument_into_literal_argument.yul
{
    setimmutable(0, loadimmutable("abc"), "abc")
}
// ====
// dialect: evm
// ----
// TypeError 9114: (6-18='setimmutable'): Function expects direct literals as arguments.
